# TrafficAnalysis

./: .gitignore
TrafficAnalysis/: CMakeLists.txt  main.cpp  test.cpp
__MACOSX/TrafficAnalysis/data/: ._video-01.avi
